--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Games-Cards-Pair
 
+0.04  Sun Oct 19 09:37:20 2014
+      - Removed the use of 'Carp' and 'Readonly'.
+      - Added Copyright year details to the pod document.
+      - Slight style changes overall.
+
 0.03  Sun Oct 19 08:50:15 2014
       - Removed Build.PL file.
       - Converted file to unix format.
