--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Games::Cards::Pair
 
+0.18  Thu Jul 05 08:00:00 2018
+      - Used InstanceOf instead Object as type.
+
 0.17  Thu Jun 08 10:20:00 2017
       - Updated pod document with regard to the game script.
       - Updated game script to be more user friendly.
